--- a/po/sk.po
+++ b/po/sk.po
@@ -1,26 +1,26 @@
 # translation of yelp.HEAD.po to Slovak
 # translation of sk.po to Slovak
 # Slovak translation of sk.po
-# translation of @yelp.HEAD.po to @LANGUAGE
+# translation of @PACKAGE.po to @LANGUAGE
 # yelp Slovak translation.
-# Copyright (C) 2001,2002,2003 Free Software Foundation, Inc.
-# Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>, 2001,2002,2003.
+# Copyright (C) 2001,2002,2003, 2004 Free Software Foundation, Inc.
+# Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>, 2001,2002,2003, 2004.
 # Stanislav Višňovský <visnovsky@nenya.ms.mff.cuni.cz>, 2002.
 # Stanislav Visnovsky <visnovsky@kde.org>, 2003.
-# Ivan Noris <vix@vazka.sk>, 2004
-# 
-# 
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.HEAD\n"
+"Project-Id-Version: sk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-05-28 20:35+0200\n"
-"PO-Revision-Date: 2004-05-28 22:30+0200\n"
-"Last-Translator: Ivan Noris <vix@vazka.sk>\n"
+"POT-Creation-Date: 2004-09-02 15:32+0200\n"
+"PO-Revision-Date: 2004-09-02 15:33+0200\n"
+"Last-Translator: Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>\n"
 "Language-Team: Slovak <sk-i18n@linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.9\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -100,7 +100,7 @@ msgstr "Systém"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr "Pomôcky "
+msgstr "Pomôcky"
 
 #: data/toc.xml.in.h:21
 msgid "X Applications"
@@ -120,7 +120,7 @@ msgstr "Nájsť"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr "_Nájsť: "
+msgstr "_Nájsť:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -142,24 +142,24 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Vytváracie rozhranie Yelp"
 
-#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:439 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
 msgstr "Nebol nájdený atribút href v help:document"
 
-#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:454 src/yelp-man-pager.c:316
 msgid "Out of memory"
 msgstr "Nedostatok pamäti"
 
-#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:642 src/yelp-man-pager.c:370
 msgid "Titlepage"
 msgstr "Úvodná strana"
 
-#: src/yelp-db-pager.c:643 stylesheets/l10n.xml.in.h:30
+#: src/yelp-db-pager.c:644 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "Obsah"
 
-#: src/yelp-db-pager.c:661 stylesheets/l10n.xml.in.h:69
+#: src/yelp-db-pager.c:662 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
 msgstr "Neznámy"
@@ -270,16 +270,16 @@ msgstr "URI spracovaného dokumentu"
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: Počet páuz je záporné číslo."
 
-#: src/yelp-toc-pager.c:487
+#: src/yelp-toc-pager.c:490
 #, c-format
 msgid "Could not load the OMF file '%s'."
 msgstr "Nepodarilo sa načítať OMF súbor '%s'."
 
-#: src/yelp-toc-pager.c:884
+#: src/yelp-toc-pager.c:887
 msgid "Categories"
 msgstr "Kategórie"
 
-#: src/yelp-toc-pager.c:898
+#: src/yelp-toc-pager.c:901
 msgid "Documents"
 msgstr "Dokumenty"
 
@@ -383,17 +383,17 @@ msgstr "Domov"
 msgid "Go to home view"
 msgstr "Prejsť na domovský pohľad"
 
-#: src/yelp-window.c:860
+#: src/yelp-window.c:858
 msgid "Loading..."
 msgstr "Načítavam..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1304
+#: src/yelp-window.c:1306
 msgid "translator_credits"
 msgstr "Stanislav Višňovský (visnovsky@nenya.ms.mff.cuni.cz)"
 
-#: src/yelp-window.c:1310
+#: src/yelp-window.c:1312
 msgid "A Help Browser for GNOME"
 msgstr "Pomocník pre GNOME"
 
@@ -455,16 +455,15 @@ msgstr "O tomto odkaze"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr "O tejto kapitole"
+msgstr "O tejto sekcii"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "O tejto skupine"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Aplikácie"
+msgstr "Pridruženie"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
@@ -616,11 +615,11 @@ msgstr "Odkaz"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr "Položka odkazu"
+msgstr "Položka registra"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Register"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
@@ -640,7 +639,7 @@ msgstr "Pozri aj"
 
 #: stylesheets/l10n.xml.in.h:64
 msgid "Set Index"
-msgstr ""
+msgstr "Index skupiny"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
