--- a/po/ta.po
+++ b/po/ta.po
@@ -1,20 +1,24 @@
+# translation of ta.po to Tamil
 # Tamil translation of Yelp.
 # Copyright (C) 2003 Yelp's Dinesh Nadarajah
 # This file is distributed under the same license as the Yelp package.
 # Dinesh Nadarajah <n_dinesh@yahoo.com>, 2003.
 # Dinesh Nadarajah <dinesh_list@sbcglobal.net>, 2004.
-# 
+# Jayaradha N <jaya@pune.redhat.com>, 2004.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Tamil Version of Yelp 2.6\n"
+"Project-Id-Version: ta\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-30 23:35-0500\n"
-"PO-Revision-Date: 2004-03-08 21:03-0600\n"
-"Last-Translator: Dinesh Nadarajah <dinesh_list@sbcglobal.net>\n"
-"Language-Team: Tamil <tamillinux-users@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2004-09-03 16:57+0530\n"
+"Last-Translator: Jayaradha N <jaya@pune.redhat.com>\n"
+"Language-Team: Tamil <zhakanini@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.3.1\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -78,7 +82,7 @@ msgstr "பல் ஊடகம் செயல்பாடுகள்"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "அலுவலகம் மற்றும் செயலாக்க பயன்பாடுகள்"
 
 #: data/toc.xml.in.h:17
 msgid "Scientific Applications"
@@ -258,11 +262,11 @@ msgstr "ஆவணம் URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "ஆவணத்தின் URI செயல்படுத்தப்பட வேண்டும்"
 
 #: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: பூஜ்ஜியத்தை விட சிறிய எண்ணை தவிர்க்கும்."
 
 #: src/yelp-toc-pager.c:487
 #, c-format
@@ -413,7 +417,7 @@ msgstr "இக்கட்டுரையாப் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "இந்த புத்தக பட்டியல் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
@@ -441,11 +445,11 @@ msgstr "இந்த உறுப்பு பற்றி"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "இந்த விருப்பங்கள் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "இந்த குறிப்புகள் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
@@ -453,7 +457,7 @@ msgstr "இந்த பகுதியைப் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "இந்த அமைப்புகள் பற்றி"
 
 #: stylesheets/l10n.xml.in.h:17
 msgid "Affiliation"
@@ -469,7 +473,7 @@ msgstr "கட்டுரை"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "பார்வையாளர்கள்"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
@@ -481,7 +485,7 @@ msgstr "ஆசி¡¢யர்கள்"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "புத்தகபட்டியல்"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
@@ -497,15 +501,15 @@ msgstr "அத்தியாயம்"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "ஒருங்கிணைத்தவர்"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "ஒருங்கிணைத்தவர்கள்"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "செலபோன்"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
@@ -561,7 +565,7 @@ msgstr "மட்டம்"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "பார்வையாளர் செய்தி"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
@@ -662,3 +666,4 @@ msgstr "கனோமைப் பற்றி உதவி பெறு"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "உதவி"
+
