--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -1,15 +1,16 @@
-# Canadian English translation of yelp 2.6.1.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the yelp package.
+# Canadian English translation of yelp
+# Copyright (C) 2004 Adam Weinberger and the GNOME Foundation
+# This file is distributed under the same licence as the yelp package.
 # Alexander Winston <alexander.winston@comcast.net>, 2004.
+# Adam Weinberger <adamw@gnome.org>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.6.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 23:35-0500\n"
-"PO-Revision-Date: 2004-08-03 14:34-0400\n"
-"Last-Translator: Alexander Winston <alexander.winston@comcast.net>\n"
+"POT-Creation-Date: 2004-09-08 03:28-0400\n"
+"PO-Revision-Date: 2004-09-08 14:34-0400\n"
+"Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: Canadian English <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,7 +46,7 @@ msgstr "Editors"
 
 #: data/toc.xml.in.h:8
 msgid "Education Applications"
-msgstr "Education Applications"
+msgstr "Educational Applications"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
@@ -85,7 +86,7 @@ msgstr "Scientific Applications"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr "Securities"
+msgstr "Security"
 
 #: data/toc.xml.in.h:19
 msgid "System"
@@ -384,7 +385,9 @@ msgstr "Loading..."
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1304
 msgid "translator_credits"
-msgstr "Alexander Winston <alexander.winston@comcast.net>"
+msgstr ""
+"Maintainer: Adam Weinberger <adamw@gnome.org>\n"
+"Alexander Winston <alexander.winston@comcast.net>"
 
 #: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
@@ -661,15 +664,3 @@ msgstr "Get help with GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Help"
-
-#~ msgid "‘"
-#~ msgstr "‘"
-
-#~ msgid "’"
-#~ msgstr "’"
-
-#~ msgid "“"
-#~ msgstr "“"
-
-#~ msgid "”"
-#~ msgstr "”"
