--- a/po/mk.po
+++ b/po/mk.po
@@ -1,120 +1,111 @@
-# translation of yelp.HEAD.mk.po to 
+# translation of yelp.gnome-2.6.mk.po to Macedonian
+# translation of yelp.HEAD.mk.po to
 # translation of yelp.HEAD.mk.po to Macedonian
 # translation of yelp.HEAD.po to Macedonian
 # Yelp translated on Macedonian
-# Copyright (C) 2002,2003 Free Software Foundation, Inc.
+# Copyright (C) 2002,2003, 2004 Free Software Foundation, Inc.
 # Stojcev Darko <atom1c@linux.net.mk
 # http://www.linux.net.mk
-# Ivan Stojmirov <stojmir@linux.net.mk>, 2002
-# Igor Popovski <igor@popovski.com.mk>, 2003
+# Ivan Stojmirov <stojmir@linux.net.mk>, 2002.
+# Igor Popovski <igor@popovski.com.mk>, 2003.
+# Aleksandar Savic <savica@mt.net.mk>, 2004.
+# Arangel Angov <ufo@linux.net.mk>, 2004.
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp.HEAD.mk\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2003-06-15 09:41+0200\n"
-"Last-Translator: \n"
-"Language-Team:  <mk@li.org>\n"
+"Project-Id-Version: yelp.gnome-2.6.mk\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-09-04 20:24+0200\n"
+"PO-Revision-Date: 2004-09-08 20:34+0200\n"
+"Last-Translator: Arangel Angov <ufo@linux.net.mk>\n"
+"Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.0\n"
+"X-Generator: KBabel 1.3.1\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Апликации"
+msgstr "Аплeти"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Апликации"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - десктоп"
+msgstr "Работна површина"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
-msgstr "Развивање"
+msgstr "Развој"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Развивање"
+msgstr "Развојни околини"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Развивање"
+msgstr "Алатки за развој"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Уреди"
+msgstr "Уредувачи"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Апликации"
+msgstr "Апликации за едукација"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Игри и забава"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Општо"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
-msgstr "Содржина"
+msgstr "Содржина на помош"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Апликации"
+msgstr "Интернет апликации"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "КДЕ"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Кернел рутини"
+msgstr "Кернели"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Апликации"
+msgstr "Апликации за мултимедија"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Канцелариски апликации"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Апликации"
+msgstr "Научни апликации"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Безбедности"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Системски повици"
+msgstr "Систем"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Алатки"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Апликации"
+msgstr "Апликации за X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -122,15 +113,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Р_азликувај мали-големи"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Најди"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Најди:"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -138,11 +129,11 @@ msgstr "_Следно"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
-msgstr "_Предходно"
+msgstr "_Претходно"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Завиткај околу"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -150,68 +141,62 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Yelp фабрика"
+msgstr "Фабрика за yelp"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Не е пронајден href атрибут на yelp:document"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Нема повеќе меморија"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Насловна страница"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:372
-#, fuzzy
+#: src/yelp-db-pager.c:643 src/yelp-man-pager.c:372
+#: stylesheets/l10n.xml.in.h:30
 msgid "Contents"
-msgstr "Содржина"
+msgstr "Содржини"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
-#: src/yelp-man-pager.c:390
+#: src/yelp-db-pager.c:661 src/yelp-man-pager.c:390
+#: stylesheets/l10n.xml.in.h:69
 msgid "Unknown"
-msgstr ""
+msgstr "Непознато"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "Документот  '%s' не постои"
+msgstr "Избраниот документ не може да се отвори"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "Документот  '%s' не постои"
+msgstr "Избраната страница не е најдена во овој документ."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "Документот  '%s' не постои"
+msgstr "Содржината не може да биде прочитана."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook SGML документите не се повеќе поддржани."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "Документот  '%s' не постои"
+msgstr "Избраната датотека не може да биде прочитана."
 
 #: src/yelp-main.c:94
-#, fuzzy
 msgid "Define which cache directory to use"
-msgstr "Дефинирај кој кеш директориум да се користи"
+msgstr "Дефинира кој кеш директориум да се користи"
 
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Неможам да го активирам Yelp:  '%s'"
+msgstr "Не можам да го активирам Yelp:  '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "Неможам да отворам нов прозорец."
+msgstr "Не можам да отворам нов прозорец."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -252,7 +237,7 @@ msgstr "Функции од библиотеките"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "Кернел рутини"
+msgstr "Рутини на кернелот"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
@@ -260,7 +245,7 @@ msgstr "Хардверски уреди"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
-msgstr "Конфигурациски фајлови"
+msgstr "Конфигурациски датотеки"
 
 #: src/yelp-man.c:449
 msgid "Games"
@@ -272,31 +257,30 @@ msgstr "Прегледи"
 
 #: src/yelp-man.c:459
 msgid "System Administration"
-msgstr "Систем администрирање"
+msgstr "Администрација на системот"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Документи"
+msgstr "Документ URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI на документ за обработка"
 
-#: src/yelp-toc-pager.c:266
+#: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Броењето на паузата е негативно."
 
-#: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#: src/yelp-toc-pager.c:487
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Неможам да го активирам Yelp:  '%s'"
+msgstr "Не можам да ја вчитам OMF датотеката: '%s'."
 
-#: src/yelp-toc-pager.c:883
+#: src/yelp-toc-pager.c:884
 msgid "Categories"
 msgstr "Категории"
 
-#: src/yelp-toc-pager.c:897
+#: src/yelp-toc-pager.c:898
 msgid "Documents"
 msgstr "Документи"
 
@@ -317,19 +301,16 @@ msgid "/_Edit"
 msgstr "/_Уреди"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Уреди/_Најди на страна..."
+msgstr "/Уреди/Најди..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Уреди/_Најди повторно"
+msgstr "/Уреди/Најди следно"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Уреди/_Најди повторно"
+msgstr "/Уреди/Најди претходно"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -337,7 +318,7 @@ msgstr "/_Оди"
 
 #: src/yelp-window.c:269
 msgid "/Go/_Back"
-msgstr "/Оди/_Назад"
+msgstr "/Оди/Назад"
 
 #: src/yelp-window.c:272
 msgid "/Go/_Forward"
@@ -345,27 +326,23 @@ msgstr "/Оди/_Напред"
 
 #: src/yelp-window.c:275
 msgid "/Go/_Home"
-msgstr "/Оди/_на почеток"
+msgstr "/Оди/_На почеток"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Оди"
+msgstr "/Оди/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Предходно"
+msgstr "/Oди/_Претходна страница"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Оди/_во индексот"
+msgstr "/Оди/_Наредна страница"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Содржина"
+msgstr "/Оди/Содржини"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -413,172 +390,169 @@ msgstr "Се вчитува..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1300
+#: src/yelp-window.c:1304
 msgid "translator_credits"
-msgstr "заслуги_на преведувачите"
+msgstr "Александар Савиќ savica@mt.net.mk"
 
-#: src/yelp-window.c:1306
+#: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
-msgstr "Прелистувач на документи за помош за GNOME 2.0"
+msgstr "Прелистувач на документи за помош за Гном 2.0"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "За овој артикал"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "За оваа библиографија"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "За оваа книга"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "За оваа глава"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "За овој запис"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "За овој речник"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "За овој индекс"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "За овој дел"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "За овој Preface"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "За оваа референца"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "За овој оддел"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "За овој сет"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Апликации"
+msgstr "Повразаност"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Appendix"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Артикал"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Публика"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Автор"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Автори"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Библиографија"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Книга"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Предупредување"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Глава"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Помагач"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Помагачи"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Colophon"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Copyright"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Copyrights"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Датум"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Оддел"
+msgstr "Посвета"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Уреди"
+msgstr "Уредувач"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Е-пошта"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Пример"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Фигура"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Речник"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Важно"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -586,177 +560,113 @@ msgstr "Индекс"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Забелешка"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Ниво"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Публика на порака"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Ниво на порака"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Потекло на порака"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Забелешка"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Потекло"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Друг помагач"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Други помагачи"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Дел"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Preface"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Издавач"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Издавачи"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Референца"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Запис на референца"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Оддел на референца"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Информации за објавување"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "Историја на ревизии"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Провери"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Исто така и"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Индекс"
+msgstr "Постави индекс"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Табела"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
 msgstr "Содржина"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Совет"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Наслов"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Предупредување"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Побарај помош со GNOME"
+msgstr "Побарај помош со Гном"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "Помош "
+msgstr "Помош"
 
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Документот  '%s' не постои"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Најди текст во документот:  </b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Автоматски _обвиткај"
-
-#~ msgid "Find text..."
-#~ msgstr "Најди текст..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Барај _цел збор"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "_Барај сметајки мали/големи букви"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Пребарај: "
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - десктоп"
-
-#~ msgid "Additional documents"
-#~ msgstr "Додатни документи"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Прирачници "
-
-#~ msgid "Info Pages"
-#~ msgstr "Информации"
-
-#~ msgid "Manual pages"
-#~ msgstr "Прирачници"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME е"
-
-#~ msgid "Free Software"
-#~ msgstr "Слободен Софтвер"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Се вчитува..."
-
-#~ msgid "Search in the index"
-#~ msgstr "Пребарај во индексот"
-
-#~ msgid ""
-#~ "Error while parsing the stylesheet, make sure you have your docbook "
-#~ "environment setup correctly."
-#~ msgstr "Се јави грешка при процесирање на документот."
-
-#~ msgid "Couldn't parse the document '%s'."
-#~ msgstr "Неможам да го процесирам документот '%s'"
-
-#~ msgid "Error while applying the stylesheet."
-#~ msgstr "Се јави грешка при применување на stylesheet-от"
