--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-09-13  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	* po/*.po:
+	- Version 2.6.3
+
 2004-08-30  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
