--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in 2.6.3:
+-----------------
+* Updated translations:
+  cs      (Miloslav Trmac)
+  en_CA   (Adam Weinberger)
+  et      (Priit Laes)
+  ga      (J.H.M. Dassen (Ray))
+  sk      (Ivan Noris)
+
 Changes in 2.6.2:
 -----------------
 * Fixed various leaks and crashes:
