--- a/po/ta.po
+++ b/po/ta.po
@@ -18,7 +18,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.3.1\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -666,4 +667,3 @@ msgstr "கனோமைப் பற்றி உதவி பெறு"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "உதவி"
-
