--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,15 +1,15 @@
 # Traditional Chinese translation of yelp.
 # Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
 # Joe Man <trmetal@yahoo.com.hk>, 2002.
-# Abel Cheung <maddog@linux.org.hk>, 2002-2003.
+# Abel Cheung <maddog@linuxhall.org>, 2002, 2003.
 # Roy Chan <roy.chan@linux.org.hk>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.5.6\n"
+"Project-Id-Version: yelp 2.6.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 23:35-0500\n"
-"PO-Revision-Date: 2004-03-01 16:03+0800\n"
+"POT-Creation-Date: 2004-09-10 13:19+0800\n"
+"PO-Revision-Date: 2004-09-21 20:36+0800\n"
 "Last-Translator: Roy Chan <roy.chan@linux.org.hk>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
@@ -89,9 +89,8 @@ msgid "Securities"
 msgstr "保安"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "系統函式"
+msgstr "系統"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
@@ -262,9 +261,8 @@ msgid "The URI of the document to be processed"
 msgstr "準備處理的文件的 URI"
 
 #: src/yelp-toc-pager.c:267
-#, fuzzy
 msgid "YelpTocPager: Pause count is negative."
-msgstr "YelpTocPager: 暫停計數器值為負數"
+msgstr "YelpTocPager: 暫停計數器值為負數。"
 
 #: src/yelp-toc-pager.c:487
 #, c-format
@@ -459,10 +457,10 @@ msgstr "關於這份參考"
 msgid "About This Section"
 msgstr "關於這一節"
 
+# Set = Collection of books -- Abel
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "About This Set"
-msgstr "關於這份文件"
+msgstr "關於整套書"
 
 #: stylesheets/l10n.xml.in.h:17
 msgid "Affiliation"
@@ -529,7 +527,6 @@ msgid "Date"
 msgstr "日期"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
 msgstr "呈獻"
 
@@ -642,9 +639,8 @@ msgid "See Also"
 msgstr "請參考"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "索引"
+msgstr "書目索引"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
@@ -695,29 +691,11 @@ msgstr "說明文件瀏覽器"
 #~ msgid "_Search for:"
 #~ msgstr "搜尋(_S)："
 
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME ─ 桌面"
-
 #~ msgid "Additional documents"
 #~ msgstr "額外文件"
 
-#~ msgid "Manual Pages"
-#~ msgstr "Manual Page"
-
-#~ msgid "Info Pages"
-#~ msgstr "Info Page"
-
-#~ msgid "Manual pages"
-#~ msgstr "Manual page"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME 是"
-
 #~ msgid "Free Software"
 #~ msgstr "自由軟體"
-
-#~ msgid "(C)"
-#~ msgstr "版權所有 (c)"
 
 #~ msgid "Previous"
 #~ msgstr "上一頁"
