--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-09-28  Shaun McCance  <shaunm@gnome.org>
+
+	* src/Makefile.am:
+	* src/test-uri.c:
+	* src/yelp-utils.c:
+	* src/yelp-utils.h:
+	- Added yelp-utils.[ch], which will simplify things eventually
+
 2004-09-24  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
