--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep 29 00:53:03 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* src/Makefile.am: Make the Gecko stuff build.
+
 2004-09-28  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-utils.c:
